--- a/app/templates/navbars/forklift-group-navbar-items.html
+++ b/app/templates/navbars/forklift-group-navbar-items.html
@@ -1,3 +1,16 @@
 <li class="nav-item">
     <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/prodverse/productionschedule">Production Schedule</a>
+</li>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Item Lookup
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <li><a class="dropdown-item" href="/prodverse/lookupitem/">Item Quantity</a></li>
+    <li><a class="dropdown-item" href="/core/lookuplocation/">Chemical Location</a></li>
+    <li><a class="dropdown-item" href="/core/lookuplotnum/">Lot Numbers</a></li>
+    </ul>
+</li>
