--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,18 +34,21 @@
                         <div class="collapse navbar-collapse" id="navbarToggle">
                             <ul class="navbar-nav mr-auto">
                                 {% if user.is_authenticated %}
-                                {% include 'navbars/all-users-navbar-items.html' %}
-                                    {% if user.is_staff %}
-                                        {% include 'navbars/admin-navbar-items.html' %}
+                                    {% include 'navbars/all-users-navbar-items.html' %}
+                                    {% if user|has_group:"blend_crew" %}
+                                        {% include 'navbars/blend-crew-navbar-items.html' %}
+                                    {% endif %}
+                                    {% if user|has_group:"front_office" %}
+                                        {% include 'navbars/office-navbar-items.html' %}
                                     {% endif %}
                                     {% if user|has_group:"forklift_operator" %}
                                         {% include 'navbars/forklift-group-navbar-items.html' %}
                                     {% endif %}
-                                    {% if user|has_group:"blend_crew" %}
-                                        {% include 'navbars/blend-crew-navbar-items.html' %}
+                                    {% if user.is_staff %}
+                                        {% include 'navbars/admin-navbar-items.html' %}
                                     {% endif %}
-                                </ul>
                                 {% endif %}
+                            </ul>
                             <div class="navbar-nav" class='text-right'>
                                 {% if user.is_authenticated %}
                                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
