Add 1/1000000 gigchad chance.Update table scripts.

--- a/app/core/templates/core/checklistmgmt.html
+++ b/app/core/templates/core/checklistmgmt.html
@@ -39,12 +39,12 @@
                 </a>
             {% endif %}
             </br>
-            <a href="/core/emailsubmissionreport?recipient=pmedlin@kinpakinc.com" id="emailIssuesLink">
+            <a href="/core/emailsubmissionreport?recipient=pmedlin@kinpakinc.com" id="emailSubmissionsLink">
                 <button class="btn btn-secondary">Email Submission Report</button>
             </a>
             </br>
             </br>
-            <a href="/core/emailissuereport?recipient=pmedlin@kinpakinc.com" id="emailSubmissionsLink">
+            <a href="/core/emailissuereport?recipient=pmedlin@kinpakinc.com" id="emailIssuesLink">
                 <button class="btn btn-secondary">Email Issues Report</button>
             </a>
         </div>
