--- a/app/core/templates/core/testpage.html
+++ b/app/core/templates/core/testpage.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 <!-- Header Blocks -->
-{% block title %}<title>Lookup Location</title>{% endblock %}
+{% block title %}<title>Test Page</title>{% endblock %}
 
 {% block scripts %} 
 <link rel="shortcut icon" type="image/png" href="{% static 'core\kpkhomescrico.png' %}">
@@ -13,7 +13,7 @@
 <!-- Body Blocks -->
 {% block content %}
     <div>
-       today number is  {{ wekdy }}
+       today number is  {{ data }}
     </div>
     
 {% endblock content %}
