Add a few missing page titles.

--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %}<title>Blend Schedule</title>{% endblock %}
+
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendSchedule.css' %}">
 {% endblock scripts %}
