--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+
+{% block title %}<title>Batch Table</title>{% endblock %}
+
 {% block content %}
     <div class='text-center'>
         <h1>All Lot Numbers For {{ line }} Runs</h1>
