--- a/app/core/templates/core/blendsheet.html
+++ b/app/core/templates/core/blendsheet.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %}<title>Blend Sheet</title>{% endblock %}
+
 {% block scripts%} <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendsheet.css' %}">{% endblock%}
 {% block content %}
 <table id="headerinfotable">
