--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %}<title>Blend Shortages</title>{% endblock %}
+
 {% block scripts %}
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/blendShortages.css' %}">
 {% endblock scripts %}
