--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -29,6 +29,7 @@
         <li><a class="dropdown-item" href="/core/blendshortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/productionblendruns/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/blendcountsheets">Blend Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/blendstatistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blendschedule/all">Scheduled Blends</a></li>
