--- a/app/core/templates/core/blendstatistics.html
+++ b/app/core/templates/core/blendstatistics.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="centerDiv">
-        {% if last_week_blends_produced.total < one_week_blend_demand.total %}
+        {% if past_5_days_blends_produced.total.total < one_week_blend_demand.total %}
             <img src="{% static 'core/media/ohno.gif' %}">
         {% else %}
             <img src="{% static 'core/media/itsfine.gif' %}">
@@ -89,7 +89,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr {% if last_week_blends_produced.total < one_week_blend_demand.total %}class="panicMode"{% endif %}>
+                    <tr {% if past_5_days_blends_produced.total < one_week_blend_demand.total %}class="panicMode"{% endif %}>
                         <td>{{ past_5_days_blends_produced.total }}</td>
                         <td>{{ one_week_blend_demand.total }}</td>
                     </tr>
