--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -9,47 +9,51 @@
     </div>
     <br>
 </div>
-<div class="table-responsive-sm">
-    <table class="table text-left table-bordered">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Blend</th>
-                <th scope="col">Description</th>
-                <th scope="col">Lot Number</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Totes Needed</th>
-                <th scope="col">When Short</th>
-                <th scope="col" class="noPrint">3wk Short</th>
-                <th scope="col" class="noPrint">Entered In Sage</th>
-                <th scope="col" class="noPrint">Manage</th> 
-            </tr>
-        </thead>
-        {% for item in desk_two_blends %}
-            <tr>
-                <td>{{ item.blend_pn }}</td>
-                <td>{{ item.description }}</td>
-                <td>{{ item.lot }}</td>
-                <td>{{ item.quantity|floatformat:1 }} gal</td>
-                <td>{{ item.totes_needed|floatformat:0 }}</td>
-                <td>{{ item.hourshort|floatformat:1 }}</td>
-                <td class="noPrint">{{ item.threewkshort }}</td>
-                <td class="noPrint">{% if not item.when_entered.receiptdate %}Not Entered{% else %}{{ item.when_entered.receiptdate }}{% endif %}</td>
-                <td class="noPrint">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                            Manage Blend...
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="/core/mngReq/moveupone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Up 1</a></li>
-                            <li><a class="dropdown-item" href="/core/mngReq/movedownone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Down 1</a></li>
-                            <li><a class="dropdown-item" href="/core/mngReq/movetotop/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Top</a></li>
-                            <li><a class="dropdown-item" href="/core/mngReq/movetobottom/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Bottom</a></li>
-                            <li><a class="dropdown-item" href="/core/mngReq/delete/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Delete</a></li>
-                        </ul>
-                    </div>
-                    </a>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
-</div>
+{% if desk_two_blends %}
+    <div class="table-responsive-sm">
+        <table class="table text-left table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Blend</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Lot Number</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Totes Needed</th>
+                    <th scope="col">When Short</th>
+                    <th scope="col" class="noPrint">3wk Short</th>
+                    <th scope="col" class="noPrint">Entered In Sage</th>
+                    <th scope="col" class="noPrint">Manage</th> 
+                </tr>
+            </thead>
+            {% for item in desk_two_blends %}
+                <tr>
+                    <td>{{ item.blend_pn }}</td>
+                    <td>{{ item.description }}</td>
+                    <td>{{ item.lot }}</td>
+                    <td>{{ item.quantity|floatformat:1 }} gal</td>
+                    <td>{{ item.totes_needed|floatformat:0 }}</td>
+                    <td>{{ item.hourshort|floatformat:1 }}</td>
+                    <td class="noPrint">{{ item.threewkshort }}</td>
+                    <td class="noPrint">{% if not item.when_entered.receiptdate %}Not Entered{% else %}{{ item.when_entered.receiptdate }}{% endif %}</td>
+                    <td class="noPrint">
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                Manage Blend...
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="/core/mngReq/moveupone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Up 1</a></li>
+                                <li><a class="dropdown-item" href="/core/mngReq/movedownone/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move Down 1</a></li>
+                                <li><a class="dropdown-item" href="/core/mngReq/movetotop/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Top</a></li>
+                                <li><a class="dropdown-item" href="/core/mngReq/movetobottom/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Move To Bottom</a></li>
+                                <li><a class="dropdown-item" href="/core/mngReq/delete/{{ item.blend_area }}/{{ item.id }}/{{ item.order }}">Delete</a></li>
+                            </ul>
+                        </div>
+                        </a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+{% else %}
+    <h2>No blends scheduled.</h2>
+{% endif %}
