Add func/template/url for where-used report.

--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -33,6 +33,7 @@
                             <option reportval="All-Upcoming-Runs" class="reportOption">All Upcoming Runs</option>
                             <option reportval="Count-History" class="reportOption">Count History</option>
                             <option reportval="Counts-Transactions" class="reportOption">Counts And Transactions</option>
+                            <option reportval="Where-Used" class="reportOption">Where Used</option>
                         </select>
                     </td>
                 </tr>
