Port changes from branch prod-sch-info-modals.

--- a/app/prodverse/templates/prodverse/productionschedule.html
+++ b/app/prodverse/templates/prodverse/productionschedule.html
@@ -85,10 +85,7 @@
               };
               
               // Kit + Oil Schedule Remove Blend Column
-              if (file === staticpath + 'kitschedule.html') {
-                $('td:nth-child(6)').remove();
-              };
-              if (file === staticpath + 'oilschedule.html') {
+              if (file === staticpath + 'kitschedule.html' || file === staticpath + 'oilschedule.html') {
                 $('td:nth-child(6)').remove();
               };
 
